Guy I did many things ah

--- a/assets/uacss/main.css
+++ b/assets/uacss/main.css
@@ -3,7 +3,7 @@
 
 :root {
   --sideBar-primary-color: #b9b9b9;
-  --sideBar-secondary-color: #e5e5e5;
+  --sideBar-secondary-color: #F0F7FF;
   --sideBar-active: #362f74;  
 }
 
@@ -172,7 +172,7 @@ body {
 
   .main-content {
     margin-left: 200px;
-    background-color: #e5e5e5;
+    background-color: #F0F7FF;
   }
 
 
