side nav bar hover added

--- a/assets/uacss/style.css
+++ b/assets/uacss/style.css
@@ -154,12 +154,13 @@ font-weight: normal;
     border-top-color: #362F74;
 }
 
-a:hover {
+.header__link:hover {
      color: #0056b3; 
      text-decoration: none; 
      font-weight: 600;
     border-bottom: 3px solid var(--sideBar-active);
 }
+
 
 
 @media (min-width: 576px) {
@@ -185,6 +186,16 @@ a:hover {
     
     .form-group {
         font-size: 19px;
+    }
+
+    li:hover::after {
+        /* border-right: 3px solid black; */
+        content: '';
+        width: 15px;
+        height: 25px;
+        border-right: 3px solid var(--sideBar-active);
+        position: absolute;
+        right: 0;
     }
 }
 
