--- a/assets/uacss/style.css
+++ b/assets/uacss/style.css
@@ -188,7 +188,7 @@ font-weight: normal;
         font-size: 19px;
     }
 
-    li:hover::after {
+    .sidebar__lists li:hover::after {
         /* border-right: 3px solid black; */
         content: '';
         width: 15px;
